# PyRIDF

./: .gitignore  README.md  pyproject.toml
ridf/: element.py
src/pyridf/: __init__.py  element.py  io.py  parser.py  ridf.py  util.py
